added cell ensuring future reuse of cleaned data

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -177,6 +177,21 @@
     "plt.title(\"Top 30 Most Variable Genes\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "172439ef",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# save cleaned data for reuse\n",
+    "df_log.to_csv(\"../data/expression_cleaned_log.csv\")\n"
+   ]
   }
  ],
  "metadata": {
